# test_tflite

./: CMakeLists.txt  README.md  main.cpp
whisper/: whisper_tflite.cpp
yolov5/: yolov5_6.0_6.1_tflite.cpp
